--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    background-color: rgb(251, 248, 233);
+}
+
 h1 {
     color: rgb(0, 153, 153);
     font-family: 'Brush Script MT', cursive;
@@ -58,6 +62,3 @@ ol {
     margin-left: auto;
     margin-right: auto;
 }
-
-
-
